--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </p>
             </div>
             <div id="heb" class="text-zone">
-                <h1>משימה: פיתוח אפליקציה ליישום סימולציית רמזור</h1>
+                <h1>משימה: פיתוח אפליקציה לסימולציית רמזור</h1>
                 <h2>טכנולוגיות ושפות תוכנה</h2>
                 ASP.NET MVC or .NET Core, C#, HTML, JavaScript, CSS3, JSON, JQuery
                 <h2>תיאור כללי</h2>
@@ -131,7 +131,7 @@
 
 
 בהפעלת הדף האפליקציה תציג צבע אדום, אחר כך אדום וצהוב ביחד, אחרי זה ירוק ובסוף צהוב. 
-בסוף הסדרה, הצבעים חוזרים על עצמם בלולאה אין סופית לפי הסדר הפורט, כמו שמופיע באנימציה.
+בסוף הסדרה, הצבעים חוזרים על עצמם בלולאה אין סופית לפי הסדר המפורט, כמו שמופיע באנימציה.
 </p>
 <p>
 זמן הצגה: אדום או ירוק - 3 שניות, צהוב או אדום + צהוב - 1.5 שניות.            
@@ -178,10 +178,8 @@
                     </ul>
   
                 <p>
-                בפניה ראשונה אפליקציה אמורה לפנות לשרת (lights.ashx) ללא פרמטרים בעזרת AJAX 
-                השרת מחזיר צבע ברירת מחדל (אדום) וזמן (3 שניות) שהצבע יהיה דלוק.
-                יש לבצע את הפניה באמצעות JQuery.
-                     
+                בפניה ראשונה האפליקציה אמורה לפנות ל-API <b>/lights</b> ללא פרמטרים בעזרת AJAX .
+                השרת מחזיר צבע ברירת מחדל (אדום) וזמן של הצגת האור המתאים (3 שניות).   
                 </p>
                 
                 <p>
@@ -204,11 +202,11 @@
                 </p>
             </div>
             </div>
-        </td>
+        </td><!--
         <td style="padding:10px">
             <div class="lang lang-heb" onclick="setLang('heb', 'rus')">עברית</div>
             <div class="lang lang-rus" onclick="setLang('rus', 'heb')">Русский</div>
-        </td>
+        </td>-->
     </tr>
 </table>
 </body>
