remove vertical scroll

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         .table .row0 td{background-color:#f6f6f6}
         .table .row1 td{background-color:#eee}
         
-        .text-zone{height:600px;overflow-y:scroll;padding:0 10px 0 10px}
+        .text-zone{padding:0 10px 0 10px}
         
         .lang{cursor:pointer;padding-left:40px;background-repeat:no-repeat;margin-bottom:10px}
         .lang:hover{text-decoration:underline}
